--- a/frontend/Web/src/app/_auth/login/login.component.html
+++ b/frontend/Web/src/app/_auth/login/login.component.html
@@ -30,7 +30,7 @@
                 Login
             </button>
             <a routerLink="/cadastro">
-                <button class="login-button">Cadastro</button>
+                <button class="login-button mt-1">Cadastro</button>
             </a>
         </form>
     </div>
