--- a/frontend/Web/src/app/paciente/paciente-dashboard/paciente-dashboard.component.css
+++ b/frontend/Web/src/app/paciente/paciente-dashboard/paciente-dashboard.component.css
@@ -262,6 +262,14 @@ body {
   align-items: center;
   justify-content: center;
   font-size: 3rem;
+  overflow: hidden;
+}
+
+.profile-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
   color: #6c757d;
 }
 
