--- a/frontend/Web/src/app/tecnico/paciente/ver-perfil/ver-perfil.component.html
+++ b/frontend/Web/src/app/tecnico/paciente/ver-perfil/ver-perfil.component.html
@@ -60,7 +60,8 @@
            <div class="col-md-4">
              <img [src]="paciente.fotoUrl || 'https://place-hold.it/192x256'" 
                   class="img-fluid w-100" 
-                  alt="Foto do Paciente">
+                  alt="Foto do Paciente"
+                  (error)="onImageError($event)">
            </div>
            <div class="col-md-8">
              <table class="table table-bordered">
