--- a/frontend/Web/src/app/_auth/login/login.component.html
+++ b/frontend/Web/src/app/_auth/login/login.component.html
@@ -29,7 +29,7 @@
             <button type="submit" class="login-button" [disabled]="loginForm.invalid">
                 Login
             </button>
-            <a routerLink="/cadastro">
+            <a routerLink="/cadastro/paciente">
                 <button class="login-button mt-1">Cadastro</button>
             </a>
         </form>
